; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_blockdsp_msa.c_copy_8bit_value_width8_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_blockdsp_msa.c_copy_8bit_value_width8_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32)* @copy_8bit_value_width8_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @copy_8bit_value_width8_msa(i32* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i64 @__msa_fill_b(i32 %12)
  store i64 %13, i64* %11, align 8
  %14 = load i64, i64* %11, align 8
  %15 = trunc i64 %14 to i32
  %16 = call i32 @__msa_copy_u_d(i32 %15, i32 0)
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* %8, align 4
  %18 = ashr i32 %17, 2
  store i32 %18, i32* %9, align 4
  br label %19

19:                                               ; preds = %23, %4
  %20 = load i32, i32* %9, align 4
  %21 = add nsw i32 %20, -1
  store i32 %21, i32* %9, align 4
  %22 = icmp ne i32 %20, 0
  br i1 %22, label %23, label %36

23:                                               ; preds = %19
  %24 = load i32, i32* %10, align 4
  %25 = load i32, i32* %10, align 4
  %26 = load i32, i32* %10, align 4
  %27 = load i32, i32* %10, align 4
  %28 = load i32*, i32** %5, align 8
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @SD4(i32 %24, i32 %25, i32 %26, i32 %27, i32* %28, i32 %29)
  %31 = load i32, i32* %7, align 4
  %32 = mul nsw i32 4, %31
  %33 = load i32*, i32** %5, align 8
  %34 = sext i32 %32 to i64
  %35 = getelementptr inbounds i32, i32* %33, i64 %34
  store i32* %35, i32** %5, align 8
  br label %19

36:                                               ; preds = %19
  ret void
}

declare dso_local i64 @__msa_fill_b(i32) #1

declare dso_local i32 @__msa_copy_u_d(i32, i32) #1

declare dso_local i32 @SD4(i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
